@@ -668,6 +668,13 @@ local run_entity_updates = function(new, kind, i)
             new.charging_station_count = 4
         end
         new.charging_station_count = new.charging_station_count * math.pow(multiplier, i)
+        --recharge_minimum has to be >= energy_usage --> Make sure to use the same multiplier
+        if omni.lib.string_contained_list(new.name,{"boiler","omnifluid"}) then
+            new.recharge_minimum = new_effect(new.recharge_minimum, i)
+        else
+            new.recharge_minimum = new_effect(new.recharge_minimum, i)
+            new.recharge_minimum = new_effect(new.recharge_minimum, nil, nil, energy_multiplier)
+        end
     end
     return new
 end
