@@ -3,6 +3,7 @@ Version: 4.1.21
 Date: ????
   Bugfixes:
     - Fixed a crash on resource compression when that resource had no minable result(s)
+    - Fixed that recharge_minimum was not multiplied by the compression factor
 ---------------------------------------------------------------------------------------------------
 Version: 4.1.20
 Date: 2022.05.01
